All but macOS binaries